added posts functionality
